Add timelapse video

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
     </header>
     <main>
         <div class="coming-soon container flex-column justify-center align-center">
-            <div class="image-container sm-width">
+            <div class="oculapse-logo image-container sm-width">
                 <img src="./images/logos/oculapse-logo-dark.png">
             </div>
-            <h1>Website Coming Soon</h1>
+            <!-- <h1>Coming Soon</h1> -->
+            <div>
+               <video class="home-video" controls autoplay loop>
+                    <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+               </video>
+               <p class="video-caption">1 frame per minute, 9am - 5pm</p>
+            </div>
             <a href="https://oculapse.azurewebsites.net/">
                 <button class="orange-button lg-button">
                     Visit the Oculapse portal
