--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./images/logos/oculapse-logo-light-no-grey.svg">
             </div>
             <div class="nav-right">
-                <a class="nav-link" href="">Shop</a>
+                <!--<a class="nav-link" href="">Shop</a>-->
                 <a class="nav-link" href="https://oculapse.azurewebsites.net/">Portal</a>
             </div>
         </nav>
@@ -29,12 +29,23 @@
             <div class="oculapse-logo image-container sm-width">
                 <img src="./images/logos/oculapse-logo-dark.png">
             </div>
-            <!-- <h1>Coming Soon</h1> -->
-            <div>
-               <video class="home-video" controls autoplay loop>
-                    <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
-               </video>
-               <p class="video-caption">1 frame per minute, 9am - 5pm</p>
+            <!-- <h1>Coming Soon</h1> -->   
+            <div class="video-carousel">
+                <div class="container home-video">
+                    <video controls autoplay loop>
+                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                    </video>
+                </div>
+                <div class="container home-video">
+                    <video controls autoplay loop>
+                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                    </video>
+                </div>
+                <div class="container home-video">
+                    <video controls autoplay loop>
+                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                    </video>
+                </div>
             </div>
             <a href="https://oculapse.azurewebsites.net/">
                 <button class="orange-button lg-button">
@@ -163,11 +174,11 @@
                         </svg>
                     </a>  
                 </div>
-                <div class="container">
+                <div class="container copyright">
                     <p>Copyright © Luminite Electronics Ltd. 2024</p>
                 </div>
-                <div class="container">
-                    <div class="image-container britain-logo">
+                <div class="container britain-logo">
+                    <div class="image-container">
                         <img src="./images/logos/britain-badge.png">
                     </div>
                 </div>  
