--- a/index.html
+++ b/index.html
@@ -29,23 +29,22 @@
             <div class="oculapse-logo image-container sm-width">
                 <img src="./images/logos/oculapse-logo-dark.png">
             </div>
-            <!-- <h1>Coming Soon</h1> -->   
+            <div class="hero-text">
+                <p>
+                    The rapidly deployable timelapse camera that uploads footage daily
+                </p>
+                <p>4G Connectivity   |   Battery or Solar Powered   |   5MP High-Definition Camera</p>
+            </div>  
             <div class="video-carousel">
-                <div class="container home-video">
-                    <video controls autoplay loop>
-                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
-                    </video>
-                </div>
-                <div class="container home-video">
-                    <video controls autoplay loop>
-                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
-                    </video>
-                </div>
-                <div class="container home-video">
-                    <video controls autoplay loop>
-                        <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
-                    </video>
-                </div>
+                <video class="home-video" controls>
+                    <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                </video>
+                <video class="home-video" controls>
+                    <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                </video>
+                <video class="home-video" controls>
+                    <source src="./videos/400_h264-420_Rec.709L_1080p_30_HQ.mp4">
+                </video>
             </div>
             <a href="https://oculapse.azurewebsites.net/">
                 <button class="orange-button lg-button">
